fix(body): fixes body image issues on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -100,6 +100,9 @@
 .grey-paragraph {
   color: #4a4a4a; }
 
+.body-image {
+  max-width: 100%; }
+
 .input {
   padding: 10px 5px;
   margin-top: 20px;
