--- a/sass/body.scss
+++ b/sass/body.scss
@@ -63,6 +63,10 @@
   color: $grey;
 }
 
+.body-image {
+  max-width: 100%;
+}
+
 .input {
   padding: 10px 5px;
   margin-top: 20px;
